# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-utils"
version = "0.0.1"
authors = ["Adam Poulemanos <adam@knit.li>"]
edition.workspace = true
rust-version.workspace = true
description = "A collection of utilities for working with Thread. Includes fast hashers, SIMD operations, and more."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["fast", "hashing", "performance", "simd", "thread", "utils"]
categories = ["data-structures", "performance", "utils"]
include.workspace = true

[dependencies]
memchr = { workspace = true, optional = true }
rapidhash = { workspace = true, features = ["std"], optional = true }
simdeez = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.15"

[features]
default = ["hashers", "random", "simd"]
hashers = ["dep:rapidhash"]
# use `rand` library for seeding hash generation
random = ["rapidhash?/rand"]
serialization = []
# enable SIMD support for fast vector operations
# simdeez gives SIMD support on Rust stable with wasm32 (SIMD128), ARM (NEON), and X86 processors (SSE2, 3, 4.1, avx2).
simd = ["dep:memchr", "dep:simdeez"]
# can't use RapidHash's implementation in a CloudFlare worker; it relies on `os_rand`, which isn't available; rapidhash falls back to a different implementation that's good enough for most cases. If you need a more robust solution, consider seeding with TCP/IP calls to Cloudflare's [`drand`](https://docs.drand.love/docs/overview/).
worker = ["dep:simdeez"]

[lints]
workspace = true
[dev-dependencies]
tempfile = "3.14"
