# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-wasm"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "WASM bindings for Thread. Deploy Thread to the web!"
documentation.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["bindings", "thread", "wasm", "webassembly"]
categories = ["webassembly"]
include.workspace = true
publish = true

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = false
# Should we omit the default import path?
omit-default-module-path = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
split-linked-modules = true
omit-default-module-path = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "thread_wasm"
path = "src/lib.rs"

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# TODO: Add WASI support as a universal binary (i.e. for moonrepo)
js-sys = { version = "0.3.77" }
rayon = { workspace = true, features = ["web_spin_lock"], optional = true }
serde = { workspace = true, optional = true }
thread-language = { workspace = true }
thread-utils = { workspace = true, default-features = false, features = [
  "hashers",
] }
wasm-bindgen = { version = "0.2.100" }
web-sys = { version = "0.3.77", features = ["console"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["worker"]
browser = ["multi-threading", "serialization"]
multi-threading = ["rayon"]
panic_hook = ["console_error_panic_hook", "web-sys/console"]
# TODO: wasi = [ ]
serialization = ["serde/derive"]
worker = ["web-sys/console"]  # single-threaded worker deployment

[lints]
workspace = true
