[package]
name = "ag-service-ast"
version = "0.27.3"
edition = "2021"
license = "AGPL-3.0-or-later AND MIT"
description = "Core AST abstractions and node traversal for ast-grep"
authors = ["Herrington Darkholme <hdh@hypers.space>"]

[dependencies]
# Serialization support
serde = { version = "1.0.219", features = ["derive"] }

# UUID generation for node IDs
uuid = { version = "1.17.0", features = ["v4"] }

# Error handling
thiserror = "2.0.12"

[features]
default = []
