[package]
name = "ag-service-ast"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later AND MIT"
description = "Core AST abstractions and node traversal for ast-grep"
authors = [
    "Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>",
    "Knitli Inc <knitli@knit.li>",
    "Adam Poulemanos for Knitli <adam@knit.li>",
]

[dependencies]
# Serialization support
serde = { workspace = true, optional = true }

# UUID generation for node IDs
uuid = { workspace = true, features = ["v4"] }

# Error handling
thiserror.workspace = true

ag-service-types = { workspace = true, features = ["ast"]}

[features]
default = ["serde"]
serde = ["dep:serde", "uuid/serde", "serde/derive"]
