[package]
name = "ag-service-check"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Single-function check crate for AST-grep. MIT licensed."

[dependencies]
ag-service-types.workspace = true
ag-service-core.workspace = true
ag-service-rule.workspace = true
thread_languages.workspace = true
