[package]
name = "ag-service-check"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later AND MIT"
description = "Single-function check crate for AST-grep."

[dependencies]
ag-service-types.workspace = true
ag-service-core.workspace = true
ag-service-rule.workspace = true
thread-languages.workspace = true
