[package]
name = "ag-service-check"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later AND MIT"
description = "Single-function check crate for AST-grep."

[dependencies]
ag-service-types.workspace = true
ag-service-label.workspace = true
ag-service-rule.workspace = true
ag-service-ast.workspace = true
ag-service-tree-sitter.workspace = true
thread-utils.workspace = true
thread-threadlang.workspace = true
anyhow.workspace = true

serde = { workspace = true, optional = true }

[features]
default = ["dashmap"]
dashmap = ["thread-utils/dashmap"]
inline = ["thread-utils/inline"]
serde = ["dep:serde", "serde/derive", "ag-service-types/serde", "thread-threadlang/serde"]

cli-support = []
